# tomli-testlab

./: .gitignore  LICENSE  QA_TEST_PLAN.md  README.md  __init__.py  pyproject.toml  pytest.ini  run_all.py  run_clean.py
.github/workflows/: ci.yml
docs/: test_design.md
tests/: conftest.py  test_boundary.py  test_decision_table.py  test_invalid.py  test_parse.py  test_property.py
tomli_testlab/: __init__.py
